[package]
name = "miband-heart-rate"
authors = ["Tnze"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Tnze/miband-heart-rate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
bluest = "0.6.6"
futures-lite = "2.3.0"
tiny_http = "0.12.0"
tungstenite = "0.20.1"
async-tungstenite = "0.20.0"
async-std = "1.12.0"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-channel = "0.3.28"